--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <th>City</th>
     <th>State</th>
     <th>2017 estimate</th>
+  
   </tr>
   <tr>
     <td>New York</td>
@@ -27,6 +28,11 @@
     <td>Chicago</d>
     <td>Illinois</td>
     <td>2716450</td>
+  </tr>
+   <tr>
+    <td>Houston</d>
+    <td>Texas</td>
+    <td>2312717</td>
   </tr>
 </table>
   <!-- Write your HTML here -->
